--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "octokit": "^1.8.1",
     "probot": "^12.2.4"
   },
   "devDependencies": {
     "@types/jest": "^28.1.0",
     "@types/node": "^18.0.0",
+    "eslint": "^8.18.0",
     "jest": "^26.6.3",
     "nock": "^13.0.5",
+    "prettier": "^2.7.1",
     "smee-client": "^1.2.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
