--- a/package.json
+++ b/package.json
@@ -1,37 +1,47 @@
 {
-  "name": "@joekarow/assistant",
-  "version": "1.0.0",
-  "private": true,
-  "description": "A Probot app",
-  "author": "Joe Karow",
-  "license": "GPLv3",
-  "homepage": "https://github.com/JoeKarow/jk-assistant",
-  "keywords": [
-    "probot",
-    "github",
-    "probot-app"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "start": "probot run ./lib/index.js",
-    "test": "jest"
-  },
-  "dependencies": {
-    "octokit": "^1.8.1",
-    "probot": "^12.2.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^28.1.0",
-    "@types/node": "^18.0.0",
-    "eslint": "^8.18.0",
-    "jest": "^26.6.3",
-    "nock": "^13.0.5",
-    "prettier": "^2.7.1",
-    "smee-client": "^1.2.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
-  },
-  "engines": {
-    "node": ">= 10.13.0"
-  }
+	"name": "@joekarow/assistant",
+	"version": "1.0.0",
+	"private": true,
+	"description": "A Probot app",
+	"author": "Joe Karow",
+	"license": "GPLv3",
+	"homepage": "https://github.com/JoeKarow/jk-assistant",
+	"keywords": [
+		"probot",
+		"github",
+		"probot-app"
+	],
+	"scripts": {
+		"build": "tsc",
+		"start": "probot run ./lib/index.js",
+		"test": "jest",
+		"lint": "eslint --ext .js,.ts",
+		"format": "prettier -u -w --ignore-path .gitignore *"
+	},
+	"dependencies": {
+		"octokit": "^1.8.1",
+		"probot": "^12.2.4"
+	},
+	"devDependencies": {
+		"@types/jest": "^28.1.0",
+		"@types/node": "^18.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.0",
+		"@typescript-eslint/parser": "^5.30.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.0.0",
+		"jest": "^26.6.3",
+		"nock": "^13.0.5",
+		"prettier": "^2.7.1",
+		"smee-client": "^1.2.2",
+		"ts-jest": "^26.4.4",
+		"typescript": "^4.1.3"
+	},
+	"engines": {
+		"node": ">= 10.13.0"
+	}
 }
