--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
 		"probot-app"
 	],
 	"scripts": {
+		"prepare": "husky install",
 		"build": "tsc",
 		"start": "probot run ./lib/index.js",
 		"test": "jest",
 		"lint": "eslint --ext .js,.ts",
 		"format": "prettier -u -w --ignore-path .gitignore *"
 	},
+	"lint-staged": {
+		"*.(js,ts)": "eslint",
+		"*": "prettier -u -w"
+	},
 	"dependencies": {
+		"husky": "^8.0.1",
 		"octokit": "^1.8.1",
 		"probot": "^12.2.4"
 	},
@@ -35,6 +41,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
 		"jest": "^26.6.3",
+		"lint-staged": "^13.0.3",
 		"nock": "^13.0.5",
 		"prettier": "^2.7.1",
 		"smee-client": "^1.2.2",
