--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
 	],
 	"scripts": {
 		"prepare": "husky install",
-		"build": "tsc",
-		"start": "probot run ./lib/index.js",
+		"build": "rm -rf ./dist && tsc",
+		"clean": "rm -rf ./dist",
+		"dev": "concurrently npm:dev:*",
+		"dev:compiler": "tsc --watch",
+		"dev:probot": "probot run ./dist/app.js --port $PORT",
+		"start": "vercel dev",
 		"test": "jest",
 		"lint": "eslint --ext .js,.ts",
 		"format": "prettier -u -w --ignore-path .gitignore *"
@@ -24,12 +28,20 @@
 		"*": "prettier -u -w"
 	},
 	"dependencies": {
+		"@vercel/node": "^2.3.3",
+		"concurrently": "^7.2.2",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
 		"husky": "^8.0.1",
+		"jsonwebtoken": "^8.5.1",
 		"octokit": "^1.8.1",
+		"octokit-auth-probot": "^1.2.6",
 		"probot": "^12.2.4"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.13",
 		"@types/jest": "^28.1.0",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/node": "^18.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.30.0",
 		"@typescript-eslint/parser": "^5.30.0",
@@ -43,12 +55,15 @@
 		"jest": "^26.6.3",
 		"lint-staged": "^13.0.3",
 		"nock": "^13.0.5",
+		"nodemon": "^2.0.18",
 		"prettier": "^2.7.1",
-		"smee-client": "^1.2.2",
+		"smee-client": "^1.2.3",
 		"ts-jest": "^26.4.4",
-		"typescript": "^4.1.3"
+		"ts-node": "^10.8.1",
+		"typescript": "^4.1.3",
+		"vercel": "^25.2.2"
 	},
 	"engines": {
-		"node": ">= 10.13.0"
+		"node": ">= 16"
 	}
 }
